Getting folders ready.

--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>BeeU</title>
-        <link rel="stylesheet" href="styles/styles.scss">
-        <link rel="icon" href="./favicon.ico" type="image/x-icon">
+        
+        <link rel="stylesheet" type=“text/css” href=“/styles/styles.scss”>
+        <link rel="icon" type="image/x-icon" href="/images/favicon.png">
+
+        <!-- Fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1>Are you ready to BeeU?</h1>  
-        <script src="index.js"></script>
+        <h1>JUST BE YOU</h1>  
+        <!-- <script src="index.js"></script> -->
     </body>
 </html>
