--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>BeeU</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         
-        <link rel="stylesheet" type=“text/css” href=“/styles/styles.scss”>
+        <!-- Favicon -->
         <link rel="icon" type="image/x-icon" href="/images/favicon.png">
 
         <!-- Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+
+        <!-- Styles -->
+        <link rel="stylesheet" type="text/css" href="/css/styles.css">
     </head>
     <body>
         <h1>JUST BE YOU</h1>  
