--- a/index.html
+++ b/index.html
@@ -13,10 +13,22 @@
         <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 
         <!-- Styles -->
-        <link rel="stylesheet" type="text/css" href="/css/styles.css">
+        <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
     <body>
-        <h1>JUST BE YOU</h1>  
+        <h2>JUST</h2>
+        <h1>BE YOU</h1>
+
+        <div id="login-input">
+            <input id="login-email" type="email">
+            <input id="login-password" type="password">
+            <button id="login-button">login</button>
+        </div>
+
+        <div id="sign-up-and-login">
+            <p>Can't be just you yet?</p>
+            <button id="signup-login">sign up now</button>
+        </div>
         <!-- <script src="index.js"></script> -->
     </body>
 </html>
